--- a/src/components/wordDisplay/styles.css
+++ b/src/components/wordDisplay/styles.css
@@ -4,8 +4,13 @@
 }
 
 .letter {
-  background-color: green;
-  margin: 10px;
+  margin: 2px;
   height: 60px;
-  width: 40px;
+  width: 45px;
+
+  background-color: green;
+
+  font-size: 40px;
+  line-height: 65px;
+  color: black;
 }
