--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
   font-family: sans-serif;
   text-align: center;
   display: grid;
-  grid-template-rows: 60px 120px 100px;
+  grid-template-rows: 60px 120px 200px 100px;
 }
 
 body {
