--- a/src/components/keyboard/styles.css
+++ b/src/components/keyboard/styles.css
@@ -1,4 +1,5 @@
-.key {
+.key,
+.keyclicked {
   margin: 5px;
   height: 40px;
   width: 30px;
@@ -7,4 +8,8 @@
   border: 1px solid green;
   outline: none;
   text-align: center;
+}
+
+.keyclicked {
+  color: black;
 }
